# cv_course

./: .gitignore  README.md
TermProject/: 《数字图像处理与机器视觉》课程作业（手写数字特征识别）.docx  《数字图像处理与机器视觉》课程作业（细胞核分割）.docx
TermProject/src/: LeNet_mnist.py  feature_match_raw.py  feature_match_sift.py  feature_match_sobel.py
hw1/: CMakeLists.txt  hw1.cpp
hw10/: CMakeLists.txt  README.md
hw10/src/: blur_restoration.cpp  morphology.cpp
hw2/: CMakeLists.txt  README.md
hw2/src/: hw2.cpp
hw3/: CMakeLists.txt
hw3/inc/: ImageStitcher.hpp
hw3/src/: ImageStitcher.cpp  hw2.cpp  hw3.cpp
hw4/model/: lenet5_model.pth  lenet5_model1.pth
hw4/src/: LeNet_test.py  classifier.py  classifier_resnet.py  classifier_resnet50.py  download_dataset.py  show_data.py  unpack.py
hw5/: CMakeLists.txt
hw5/assets/calib2/: test.sh
hw5/assets/result/: calibration_results.yaml
hw5/src/: calibration.cpp  param.yaml
hw6/: .~lock.作业1.docx#  CMakeLists.txt
hw6/docs/: ~$作业1.docx
hw6/src/: problem1_1.cpp  problem1_2.cpp  problem1_3.cpp  problem2_1.cpp  problem2_2.cpp  problem2_3.cpp
hw7/: CMakeLists.txt  README.md  hw7.md
hw7/src/: ft.cpp
hw8/: CMakeLists.txt  README.md
hw8/src/: filter.cpp  ft.cpp  seg.cpp
hw9/: CMakeLists.txt  README.md
hw9/src/: canny_detect.cpp  hough_detect.cpp
